<resources>
    <string name="app_name">Ymir Android</string>
    <string name="setup_title">Ymir Android Setup</string>
    <string name="setup_next">Next</string>
    <string name="setup_back">Back</string>
    <string name="setup_finish">Finish</string>
    <string name="setup_welcome_title">Set up Ymir</string>
    <string name="setup_welcome_text">Choose where Ymir stores app data, select a Saturn BIOS, and pick the folder that contains your Saturn games.</string>
    <string name="setup_app_title">Step 1: Select App Folder</string>
    <string name="setup_app_explanation">Choose the folder where Ymir will create its app data, BIOS folder, game cache, bezels, and IGDB cache.</string>
    <string name="setup_select_app">Select Folder</string>
    <string name="setup_app_not_selected">No app folder selected</string>
    <string name="setup_app_selected">App folder: %1$s</string>
    <string name="setup_app_required">Select an app folder to continue</string>
    <string name="setup_app_invalid">Select a writable app folder</string>
    <string name="setup_bios_title">Step 2: Select Saturn BIOS</string>
    <string name="setup_bios_explanation">Pick the BIOS image you want Ymir to use.\nIt will be copied into the BIOS folder inside your app folder.</string>
    <string name="setup_select_bios">Select BIOS File</string>
    <string name="setup_bios_not_selected">No BIOS selected</string>
    <string name="setup_bios_selected">BIOS: %1$s</string>
    <string name="setup_bios_required">Select a BIOS file to continue</string>
    <string name="setup_bios_failed">BIOS import failed: %1$s</string>
    <string name="setup_games_title">Step 3: Select Games Folder</string>
    <string name="setup_games_explanation">Choose the folder that contains your Saturn discs. Ymir will scan this folder for games, while bezels and IGDB data stay in your app folder.</string>
    <string name="setup_select_games">Select Folder</string>
    <string name="setup_games_not_selected">No games folder selected</string>
    <string name="setup_games_selected">Games folder: %1$s</string>
    <string name="setup_games_required">Select a games folder to continue</string>
</resources>
